<resources>
    <string name="LOADING">Loading...</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_date_picker_month">Month</string>
    <string name="accessibility_date_picker_week">Week</string>
    <string name="accessibility_date_picker_year">Year</string>
    <string name="accessibility_datetime_picker_date">Date</string>
    <string name="accessibility_datetime_picker_time">Time</string>
    <string name="accessibility_time_picker_ampm">AM/PM</string>
    <string name="accessibility_time_picker_hour">Hour</string>
    <string name="accessibility_time_picker_milli">Millisecond</string>
    <string name="accessibility_time_picker_minute">Minute</string>
    <string name="accessibility_time_picker_second">Second</string>
    <string name="action_settings">Settings</string>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_textselection_title">Text selection</string>
    <string name="actionbar_web_search">Web search</string>
    <string name="app_name">Quan_Yeoboya</string>
    <string name="autofill_keyboard_accessory_content_description">Suggestions available</string>
    <string name="autofill_popup_content_description">Showing autofill popup</string>
    <string name="bitmap_image">image</string>
    <string name="btnCall">신청하기</string>
    <string name="btnWebviewBack">이전</string>
    <string name="btnWebviewForward">다음</string>
    <string name="btnWebviewHome">홈</string>
    <string name="btnWebviewMyInfo">내정보</string>
    <string name="btnWebviewReflash">새로</string>
    <string name="button_for_ssl_go_back">Back</string>
    <string name="button_for_ssl_go_forward">Continue</string>
    <string name="chat_fragment_not_send_chat">채팅은 상대 입장 후 가능합니다.</string>
    <string name="chat_fragment_not_send_crystal">보석 선물은 상대 입장 후 가능합니다.</string>
    <string name="color_picker_button_black">Black</string>
    <string name="color_picker_button_blue">Blue</string>
    <string name="color_picker_button_cancel">Cancel</string>
    <string name="color_picker_button_cyan">Cyan</string>
    <string name="color_picker_button_green">Green</string>
    <string name="color_picker_button_magenta">Magenta</string>
    <string name="color_picker_button_more">More</string>
    <string name="color_picker_button_red">Red</string>
    <string name="color_picker_button_set">Set</string>
    <string name="color_picker_button_white">White</string>
    <string name="color_picker_button_yellow">Yellow</string>
    <string name="color_picker_dialog_title">Select color</string>
    <string name="color_picker_hue">Hue</string>
    <string name="color_picker_saturation">Saturation</string>
    <string name="color_picker_value">Value</string>
    <string name="com.crashlytics.android.build_id">d89ae321-3753-48ee-a91c-908368864068</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="com_kakao_account_cancel">Cancel</string>
    <string name="com_kakao_account_cancel_tts">Cancel, Button</string>
    <string name="com_kakao_alert_appKey">need to declare com.kakao.sdk.AppKey in your AndroidManifest.xml</string>
    <string name="com_kakao_alert_install_kakaotalk">Please update KakaoTalk to the latest version.</string>
    <string name="com_kakao_alert_uri_too_long">Failed to send message because it exceeds the message size limit. Please contact the app administrator.</string>
    <string name="com_kakao_cancel_button">Cancel</string>
    <string name="com_kakao_confirm_logout">Are you sure to log out from this app?</string>
    <string name="com_kakao_confirm_unlink">Are you sure to unlink from this app?</string>
    <string name="com_kakao_kakaostory_account">with KakaoStory</string>
    <string name="com_kakao_kakaostory_account_tts">with KakaoStory, Button</string>
    <string name="com_kakao_kakaotalk_account">with KakaoTalk</string>
    <string name="com_kakao_kakaotalk_account_tts">with KakaoTalk, Button</string>
    <string name="com_kakao_login_button">Log in with KakaoAccount</string>
    <string name="com_kakao_login_button_tts">Log in with KakaoAccount, Button</string>
    <string name="com_kakao_login_image_tts">Login with KakaoAccount, Image</string>
    <string name="com_kakao_logout_button">Log out</string>
    <string name="com_kakao_ok_button">OK</string>
    <string name="com_kakao_other_kakaoaccount">with another KakaoAccount</string>
    <string name="com_kakao_other_kakaoaccount_tts">with another KakaoAccount, Button</string>
    <string name="com_kakao_profile_nickname">Nickname</string>
    <string name="com_kakao_profile_userId">Kakao User ID</string>
    <string name="com_kakao_tokeninfo_button">Token Info</string>
    <string name="com_kakao_unlink_button">Unlink</string>
    <string name="common_close">닫기</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="control_session_auth_failed">회원 인증을 실패하였습니다.</string>
    <string name="control_session_connect_failed">서버 접속에 실패하였습니다.</string>
    <string name="control_session_exhaust_crystal">보석 %d개를 사용하였습니다.</string>
    <string name="control_session_exhaust_crystal_error_by_db">서버오류로 영상통화를 종료합니다.</string>
    <string name="control_session_exhaust_crystal_error_by_not_enough">보석 부족으로 영상통화를 종료합니다.</string>
    <string name="control_session_recv_crystal">보석 %d개 선물 도착!</string>
    <string name="control_session_send_crystal_error_by_db">서버에러로 보석 선물에 실패하였습니다.</string>
    <string name="control_session_send_crystal_error_by_none">이유없이 보석 선물에 실패하였습니다.</string>
    <string name="control_session_send_crystal_error_by_not_enough">"보석이 부족합니다.
 영상채팅중 보석을 구매하실 수 있습니다.

 보석을 구매하시겠습니까?"</string>
    <string name="control_session_send_crystal_ok">보석 %d개를 선물하였습니다.</string>
    <string name="control_session_update_crystal_by_admin">보석 %d개를 관리자가 지급하였습니다.</string>
    <string name="control_session_update_crystal_by_admin2">보석 %d개를 관리자가 차감하였습니다.</string>
    <string name="control_session_update_crystal_by_buy">보석 %d개를 구매하였습니다.</string>
    <string name="control_session_update_crystal_by_buy2">보석 %d개를 차감하였습니다.</string>
    <string name="control_session_update_crystal_by_none">보석 %d개를 이유없이 지급하였습니다.</string>
    <string name="control_session_update_crystal_by_none2">보석 %d개를 이유없이 차감하였습니다.</string>
    <string name="copy_to_clipboard_failure_message">Failed to copy to the clipboard</string>
    <string name="core_com_kakao_sdk_loading">Loading…</string>
    <string name="crop__saving">사진을 저장중입니다…</string>
    <string name="crop__wait">잠시만 기다려주세요…</string>
    <string name="crop_pick_error">이미지가 존재하지 않습니다.</string>
    <string name="crosswalk_install_title">Crosswalk Project Install</string>
    <string name="crystal_fragment_send_crystal_error_by_not_enough">보유 보석이 부족하여 선물에 실패하였습니다.</string>
    <string name="date_picker_dialog_clear">Clear</string>
    <string name="date_picker_dialog_other_button_label">Other</string>
    <string name="date_picker_dialog_set">Set</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_time_picker_dialog_title">Set date and time</string>
    <string name="decompression_progress_message">Decompressing the Crosswalk Project Service...</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="default_web_client_id">89223121851-4gma6qmdbcanadd2gou0c8lm5ppjsl8p.apps.googleusercontent.com</string>
    <string name="define_smoothprogressbar" />
    <string name="desc_image">image</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">"Here's a message!"</string>
    <string name="dialog_ok">OK</string>
    <string name="myMemNo">내 회원번호</string>
    <string name="serverAddr">서버주소</string>
    <string name="testSvrAddr">http://devsol4.yeoboya.com:7901</string>
    <string name="youMemNo">상대방 회원번호</string>
</resources>